--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,3 @@
-/* fonts */
 
 /* base */
 @import "/src/css/base/main.css";
@@ -17,3 +16,14 @@
 
 /* vendors */
 @import "/src/css/vendors/normalize.css";
+
+/* fonts */
+@font-face {
+    font-family: 'Futura BK BT';
+    src: url('/src/fonts/FutuBk.ttf');
+}
+
+@font-face {
+    font-family: 'Ringbearer';
+    src: url('/src/fonts/RINGM___.TTF');
+}
