--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -23,3 +23,43 @@
     color: white;
 }
 
+h1 {
+    font-family: var(--font-titre);
+    font-size: var(--size-h1);
+    font-weight: normal;
+}
+
+.page {
+    margin-top: 150px;
+}
+
+.page__header {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0), rgb(0, 0, 0));
+}
+
+.page__header--img {
+    position: absolute;
+    z-index: -1;
+}
+
+.page__header--titre {
+    text-align: center;
+    margin: 0;
+    margin-top: 25px;
+    margin-bottom: -30px;
+}
+
+.page__header--titre::after {
+    content: "";
+    display: block;
+    width: var(--ligne-width);
+    height: 0.5px;
+    background-color: var(--orange);
+    margin: auto;
+    margin-top: 10px;
+}
+
