--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@
 @import "/src/css/composants/media.css";
 @import "/src/css/composants/article.css";
 @import "/src/css/composants/index.css";
+@import "/src/css/composants/galerie.css";
 
 /* layout */
 @import "/src/css/layout/header.css";
