--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@
 @import "/src/css/composants/index.css";
 @import "/src/css/composants/galerie.css";
 @import "/src/css/composants/boutons.css";
+@import "/src/css/composants/box.css";
 
 /* layout */
 @import "/src/css/layout/header.css";
