--- a/src/css/composants/index.css
+++ b/src/css/composants/index.css
@@ -1,15 +1,26 @@
 .article {
-    margin: 0 20px 20px 40px;
+    margin: 0 20px 300px 40px;
+}
+
+.article__bloc {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    position: relative;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0), rgb(0, 0, 0)); 
 }
 
 .article__img {
     width: 90%;
     margin-left: 30px;
+    position: absolute;
 }
 
 .article__titre {
-    font-size: 25px;
+    font-size: 22px;
     font-family: var(--font-titre);
+    font-weight: 500;
+    margin-left: 40px;
 }
 
 .article__bloc--bas {
