--- a/src/css/composants/index.css
+++ b/src/css/composants/index.css
@@ -1,26 +1,72 @@
 .article {
-    margin: 0 20px 300px 40px;
+    margin: 0 20px 50px 40px;
+    position: relative;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 .article__bloc {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    position: relative;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0), rgb(0, 0, 0)); 
 }
 
 .article__img {
     width: 90%;
     margin-left: 30px;
     position: absolute;
+    z-index: -1;
 }
+
+.article__img-3 {
+    bottom: 100px;
+}
+
+.article__img-4 {
+    bottom: 100px;
+}
+
+.article__img-5 {
+    bottom: 50px;
+}
+
+.article__img-1 {
+    bottom: 50px;
+}
+
+.article__titre::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0), rgb(0, 0, 0));
+}
+
+.article__titre-3::after {
+    bottom: 90px;
+}
+
+.article__titre-5::after {
+    bottom: 30px;
+}
+
+.article__titre-1::after {
+    bottom: 50px;
+}
+
 
 .article__titre {
     font-size: 22px;
     font-family: var(--font-titre);
     font-weight: 500;
     margin-left: 40px;
+    margin-bottom: 10px;
 }
 
 .article__bloc--bas {
@@ -60,4 +106,24 @@
     border: 1px solid var(--blanc);
     border-radius: 50px;
     padding: 5px 15px;
+}
+
+.article-1 {
+    height: 370px;
+}
+
+.article-2 {
+    height: 450px;
+}
+
+.article-3 {
+    height: 480px;
+}
+
+.article-4 {
+    height: 400px;
+}
+
+.article-5 {
+    height: 490px;
 }
