partie fr finie

--- a/src/css/utils/variables.css
+++ b/src/css/utils/variables.css
@@ -16,7 +16,7 @@
     --size-h2: 18px;
     --size-texte: 15px;
     --size-descriptif: 12px;
-    --size-index: 25px
+    --size-index: 25px;
     
     /* autres */
     --ligne-width: 200px;
